# trusty-deal-maker

./: .env  .env.example  .gitignore  ARCHITECTURE_BEFORE_AFTER.md  DELIVERY_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_SUPABASE.md  ESCROW_EXAMPLE_FLOW.md  FUND_RELEASE_TROUBLESHOOTING.md  INDEX.md  LICENSE  PLUTUS_DEPLOYMENT.md  PLUTUS_INTEGRATION.md  PLUTUS_SCRIPT_DEPLOYMENT.md  PREPROD_SETUP.md  QUICK_DEBUG_STEPS.md  QUICK_START.md  README.md  User Manual.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy-supabase-functions.yml
.lovable/: plan.md
escrow/: escrow-contract.cabal
escrow/app/: SerializeEscrow.hs
escrow/dist-newstyle/cache/: compiler  config
plutus-contract/: EscrowContract.hs  LICENSE  README.md  cabal.project  escrow.addr  escrow.base64
plutus-contract/app/: SerializeEscrow.hs
plutus-contract/test/: Spec.hs
scripts/: deploy-supabase-functions.sh  e2e-send-wallet-message.js  verify-deployment.sh
src/: App.tsx  index.css  main.tsx
src/components/escrow/: EscrowAttachments.tsx  (+7 more)
src/contexts/: AuthContext.tsx  WalletContext.tsx
src/hooks/: useTxConfirmation.ts  useUserRole.ts
src/pages/: Admin.tsx  Analytics.tsx  Auth.tsx  CreateEscrow.tsx  Dashboard.tsx  EscrowDetail.tsx  Landing.tsx  TransactionsCleared.tsx
src/services/: adminApi.ts  escrowApi.ts  lucidService.ts  mockBlockchain.ts
src/test/: plutus-deployment.test.ts  send-wallet-message.test.ts
src/types/: escrow.ts
supabase/: config.toml
supabase/migrations/: 20260127092149_1cfee7dc-5cf4-4136-8c52-663eeb5045ee.sql  20260130043502_369b2ac5-77c2-44ec-9d78-1ad5f46cb6ac.sql  20260130045224_f308fd08-4c6d-40ea-8e62-9ffde611ec07.sql  20260131020650_635668e4-e9fe-4bde-bdc4-127074d0fbb4.sql  20260205030454_3fe6ed4d-5660-4dd5-ab09-d3d3081447ba.sql  20260304024431_6b58eff8-aa84-4340-bbad-bf853904ff75.sql  20260304024713_0b68e14c-034b-4301-86b3-b2f44a2e8542.sql  20260304025051_395a698a-2adf-4524-8d7b-058058d4d3cd.sql  20260309052120_d09dc03e-b58c-4d27-b465-40060d141820.sql  20260401044642_0b9ed3d7-eaf6-4724-88ab-dedd39505ac1.sql  20260401045947_40b9e19e-c59b-468b-bc02-bb5dc1da8f34.sql  20260409054518_b5307e48-b91c-438b-9889-ba3dea1445d5.sql  20260409061936_dd243448-0442-4de7-8547-7ec8146916fd.sql  (+6 more)
(+23 files in other folders)
